# Portuguese-Hate-Speech

./: .gitignore  README.md  config.sh  mlflow.sh  pyproject.toml
data/: augmented_corpus_fortuna.csv  corpus_fortuna.csv
data/corpus/: augmented_corpus_fortuna.csv
notebooks/: 0-experiment-pipe.ipynb  0-extra.ipynb  1-data-processing.ipynb  2-data-analysis.ipynb  3-model-building.ipynb  3-model-multi-tfidf.ipynb  4-model-multi-word2vec.ipynb  4-model-word2vec.ipynb  5-model-deep.ipynb  5-model-mlp.ipynb  6-model-nn-tfidf.ipynb  7-model-bert.ipynb  8-model-lstm.ipynb  9-model-optimization.ipynb  9-model-otimization.ipynb
src/: TextDataAnalysis.py  TextNormalization.py  TrainLstm.py  TrainMultiModel.py
src/data/: control.py
src/experiment/: tracking.py
src/transformers/: text.py
src/utils/: ModelAnalysis.py  TextDataAnalysis.py  TextVisualization.py  UtilsFunctions.py
src/utlis/: TextVectorization.py
