[tool.poetry]
name = "portuguese-hate-seepch"
version = "0.1.0"
description = ""
authors = ["FelipeOliveira <fp.ramos.oliveira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
pandas = "^1.5.0"
cleantext = "^1.1.4"
clean-text = "^0.6.0"
Unidecode = "^1.3.4"
seaborn = "^0.12.0"
nltk = "^3.7"
spacy = "^3.4.1"
sklearn = "^0.0"
scikit-learn = "^1.1.2"
gensim = "^4.2.0"
pip = "^22.2.2"
install = "^1.3.5"
cuda-python = "^11.7.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
