[tool.poetry]
name = "portuguese-hate-seepch"
version = "0.1.0"
description = ""
authors = ["FelipeOliveira <fp.ramos.oliveira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
pandas = "^1.5.0"
cleantext = "^1.1.4"
clean-text = "^0.6.0"
Unidecode = "^1.3.4"
seaborn = "^0.12.0"
nltk = "^3.7"
spacy = "^3.4.1"
sklearn = "^0.0"
scikit-learn = "^1.1.2"
gensim = "^4.2.0"
pip = "^22.2.2"
install = "^1.3.5"
cuda-python = "^11.7.1"
keras = "^2.10.0"
tensorflow-text = "^2.10.0"
tf-models-official = "^2.10.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
transformers = "^4.22.2"
conda = "^4.3.16"
xgboost = "^1.6.2"
mlflow = "^1.29.0"
scikeras = "^0.9.0"
tensorflow = "^2.10.0"
tensorflow-gpu = "^2.10.0"
numba = "^0.56.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
